# object-localization-positioning

./: .gitmodules  README.md
Report/: Combined_Error.xlsx  Combined_Report.xlsx  Report-1.xlsx  Report-10.xlsx  Report-100.xlsx  Report-11.xlsx  Report-12.xlsx  Report-13.xlsx  Report-14.xlsx  Report-15.xlsx  Report-16.xlsx  Report-17.xlsx  Report-18.xlsx  Report-19.xlsx  Report-2.xlsx  Report-20.xlsx  Report-21.xlsx  Report-22.xlsx  Report-23.xlsx  Report-24.xlsx  Report-25.xlsx  Report-26.xlsx  Report-27.xlsx  Report-28.xlsx  Report-29.xlsx  Report-3.xlsx  Report-30.xlsx  Report-31.xlsx  Report-32.xlsx  Report-33.xlsx  Report-34.xlsx  Report-35.xlsx  Report-36.xlsx  Report-37.xlsx  Report-38.xlsx  Report-39.xlsx  Report-4.xlsx  Report-40.xlsx  Report-41.xlsx  Report-42.xlsx  (+62 more)
Resources/: notes.txt
Resources/Docker/: docker_run_igpu.bash
Resources/Docker/baxter-bridge/: Dockerfile
Resources/ROS/ROS1/r1_ws_message/src/custom_msg_ros1/: CMakeLists.txt  package.xml
Resources/ROS/ROS2/r2_ws_message/src/custom_msg_ros2/: CMakeLists.txt  custom_rules.yaml  package.xml
Resources/ROS/ROS2/r2_ws_message/src/custom_msg_ros2/msg/: CustomMessage.msg
src/: test.txt
src/baxter_description/: CMakeLists.txt  package.xml
src/baxter_description/urdf/: left_end_effector.urdf.xacro  right_end_effector.urdf.xacro
src/baxter_description/urdf/baxter_base/: baxter_base.urdf.xacro  baxter_base.webots.xacro
src/baxter_description/urdf/pedestal/: pedestal.xacro
src/baxter_plain/: .setup_assistant  CMakeLists.txt  package.xml
src/baxter_plain/config/: baxter.ros2_control.xacro  baxter.srdf  baxter.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/baxter_plain/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/baxter_webots/: package.xml  setup.cfg  setup.py
src/baxter_webots/baxter_webots/: baxter_controller.py
src/baxter_webots/launch/robot_launch/: robot_moveit_nodes_launch.py  robot_nodes_launch.py  robot_world_launch.py
src/baxter_webots/proto/: README.md
src/baxter_webots/resource/: baxter.srdf  baxter.urdf.xacro  moveit_controllers.yaml  moveit_kinematics.yaml
src/baxter_webots/worlds/: .baxter_sim_world.wbproj
src/hello_moveit/: package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/my_opencv_demo/: CMakeLists.txt  model.ipynb  package.xml
src/my_opencv_demo/scripts/: block_detection.py  block_detection1.py  block_detection_service.py  generate_train_imgs.py  opencv_detection copy.py  opencv_detection.py  py_opencv_demo.py
src/my_opencv_demo/src/: cpp_opencv_demo.cpp  demo.cpp  minimal_opencv_ros2_node.cpp
src/my_package/: package.xml
src/my_package/launch/: robot_launch.py
src/my_package/my_package/: follow_joint_trajectory_client.py  my_robot_driver copy.py  my_robot_driver.py
src/my_package/resource/: my_robot.urdf
src/opencv_interfaces/: CMakeLists.txt  package.xml
src/opencv_interfaces/msg/: ObjectList.msg
src/opencv_interfaces/srv/: BlockPose.srv  CaptureSource.srv  GripperCmd.srv  TargetPose.srv
src/rethink_ee_description/urdf/electric_gripper/: example_end_effector.urdf.xacro  rethink_electric_gripper.xacro
src/rethink_ee_description/urdf/electric_gripper/fingers/: basic_hard_tip.xacro  basic_soft_tip.xacro  extended_narrow.xacro  extended_wide.xacro  half_round_tip.xacro  paddle_tip.xacro  standard_narrow.xacro  standard_wide.xacro
src/rethink_ee_description/urdf/pneumatic_gripper/: pneumatic_gripper_base.xacro  rethink_pneumatic_gripper.xacro
src/webots_baxter/: CMakeLists.txt  package.xml
src/webots_baxter/Docker/linux/: docker_run_igpu.bash
src/webots_baxter/config/: README.md  initial_positions.yaml  moveit_controllers.yaml  moveit_kinematics.yaml  moveit_movegroup.yaml  moveit_visualization.rviz  ros2_control_config.yaml
src/webots_baxter/config/srdf/: baxter.srdf.xacro  baxter_base.srdf.xacro
src/webots_baxter/include/webots_baxter/: MyRobotDriver.hpp
src/webots_baxter/launch/: README.md  kinect.launch.py  robot_moveit_nodes_launch.py  robot_nodes_launch.py  robot_world_launch.py  sim_node.launch.py  sim_world.launch.py  start_launch.py  test.launch.py
src/webots_baxter/proto/: baxter.proto
src/webots_baxter/proto/camera/: Kinect.proto
src/webots_baxter/proto/lego/: lego_2x2.proto  lego_2x2_roof.proto  lego_2x3.proto  lego_2x4.proto
src/webots_baxter/proto/lego/meshes/: 2x2_roof.dae  2x3.dae  2x4.dae
src/webots_baxter/proto/robot/: baxter.proto
src/webots_baxter/resource/: README.md  moveit_baxter.srdf  moveit_visualization.rviz
src/webots_baxter/resource/baxter/urdf/: baxter.ros2_control.xacro  baxter_webots.xacro
src/webots_baxter/resource/cafe_table/: cafe_table.xacro  model.sdf  model.urdf
src/webots_baxter/resource/kinect/urdf/: Vision.urdf  kinect.urdf  kinect.urdf.xacro  kinect_control.urdf
src/webots_baxter/resource/kinect_1/urdf/: kinect.urdf.xacro  kinect_control.urdf
src/webots_baxter/resource/lego/: 1x1.urdf.xacro
src/webots_baxter/resource/lego/meshes/: 1x1.dae  2x2.dae
src/webots_baxter/resource/table/urdf/: table.urdf.xacro
src/webots_baxter/resource/table_1/urdf/: table.urdf.xacro
src/webots_baxter/resource/urdf/: baxter.ros2_control.xacro  baxter.urdf  baxter_webots.xacro  custom.xacro  kinect.urdf.xacro
src/webots_baxter/resources/urdf/: panda.urdf.xacro
src/webots_baxter/scripts/: start.py  transform_test.py
src/webots_baxter/src/: MyRobotDriver.cpp  first_node.cpp  my_robot_driver.py
src/webots_baxter/webots_baxter/: baxter_controller.py  test.py
src/webots_baxter/worlds/: .baxter_sim_world.wbproj  .sim_world.wbproj  README.md  baxter_sim_world.wbt  sim_world.wbt
